[tool.poetry]
name = "workflow"
version = "1.0"
description = "Workflow Core"
authors = ["Shiny Brar  <charanjotbrar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.2"
pydantic = "^2.0"
requests = "^2.31"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4"
pytest = "^7.4"
pytest-cov = "^4.1"
tomli = "^2.0"
pre-commit = "^3.3"

[tool.poetry.scripts]
workflow = "workflow.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
