[tool.poetry]
name = "workflow"
version = "0.7.0"
description = "Workflow Core"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.2"
pydantic = "^2.0"
requests = "^2.31"
pyyaml = "^6.0"
click = "^8.1"
toml = "^0.10"
rich = "^13.4"
minio = "^7.2"
mergedeep = "^1.3"
pydantic-settings = "^2.0"
python-logging-loki = "^0.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
tomli = "*"
pre-commit = "*"
types-requests = "*"
types-toml = "*"
types-setuptools = "*"
types-pyyaml = "*"
pytest-env = "*"
ruff = "*"
commitizen = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "*"
mkdocstrings-python = "*"

[tool.poetry.scripts]
workflow = "workflow.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
